# hack_tj_2026

./: .gitignore  Makefile  README.md  docker-compose.yml
apps/web/app/: globals.css  page.tsx
apps/web/components/inspector/: alarm-inspector.tsx
apps/web/components/layout/: timeline-scrubber.tsx  top-bar.tsx  unit-overview.tsx
apps/web/components/three/: physionet-graph.tsx
apps/web/components/ui/: badge.tsx  card.tsx
apps/web/hooks/: useTelemetrySocket.ts
apps/web/stores/: usePulseStore.ts
apps/web/types/: pulse.ts
db/: init.sql  precompute_federated_rounds.py
gateway/: Cargo.toml
gateway/src/: main.rs
inference/: main.py  requirements.txt
infra/db/migrations/: 001_extensions.sql  002_schema.sql  003_seed.sql
scripts/: replay_physionet_real.py  run-migrations.sh
services/gateway-rust/: Cargo.toml  Dockerfile
services/gateway-rust/src/: main.rs
services/inference-python/: Dockerfile
services/inference-python/app/: main.py
services/inference-python/app/models/: schemas.py
services/inference-python/app/routes/: federated.py  inference.py
services/inference-python/app/services/: feature_extractor.py  federated.py  model.py  policy_router.py
services/proof-service-node/: Dockerfile  package.json
services/proof-service-node/src/: index.js
zk-proofs/: package-lock.json  package.json
zk-proofs/src/: index.js
