[package]
name = "pulsemesh-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde", "clock"] }
futures = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
